syntax = "proto3";

option go_package = "github.com/DHLarsen/ChittyChat/proto";

package proto;

service Model
{
    rpc SendMessage (stream Message) returns (Ack);
    rpc GetUpdate (stream UpdateRequest) returns (stream Message);
    rpc giveKey (Key) returns (Ack);
    rpc ChangeNeighbor (NeighborDetails) returns (Ack);
}

message NeighborDetails {
    string port = 1;
}

message Key {
    string status = 1;
}

message Message {
    string clientName = 1;
    string message = 2;
    repeated int64 time = 3;
}

message UpdateRequest {
    string ClientName = 1;
}


message Ack {
    string status = 1;
}
